osd: Check for nosrub/nodeep-scrub in between chunks, to avoid races

Fixes: https://tracker.ceph.com/issues/47767

Signed-off-by: David Zafman <dzafman@redhat.com>